Fixed Main! Problem with Footer!

--- a/index.html
+++ b/index.html
@@ -12,31 +12,30 @@
             <h1>Стани Богат със SoftUni</h1>
         </header>
 
-        <aside id="top-aside">
-            <header>
-                Softuni екип
-            </header>
+        <aside>
             <section>
+                <header>
+                    Softuni екип
+                </header>
                 <ol>
                     <li>text</li>
                     <li>text</li>
                     <li>text</li>
                 </ol>
             </section>
-        </aside>
-        
-        <aside id="bottom-aside">
-            <header>
-                Предишни победители
-            </header>
+
             <section>
-                <ol>
-                    <li>text</li>
-                    <li>text</li>
-                    <li>text</li>
-                </ol>
+                <header>
+                    Предишни победители
+                </header>
+                    <ol>
+                        <li>text</li>
+                        <li>text</li>
+                        <li>text</li>
+                    </ol>
             </section>
         </aside>
+
         <main class="clearfix">
 
         </main>
