New images: logo.png, intro.jpg!

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="wrapper">
         <header id="main-header">
             <h1>Стани Богат със SoftUni</h1>
+            <img id="logo" src="images/logo.png" alt="Logo image">
         </header>
 
         <aside>
@@ -37,6 +38,7 @@
         </aside>
 
         <main class="clearfix">
+            <img id="intro" src="images/intro.jpg" alt="Intro image">
 
         </main>
         <footer>
