Merry Christmas Commit (First Transition)
Wheel rotation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Стани Богат със SoftUni</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script type="text/javascript" src="js.js"></script>
 </head>
 <body>
     <div id="wrapper">
@@ -39,7 +40,7 @@
 
         <main class="clearfix">
             <img id="intro" src="images/intro.jpg" alt="Intro image">
-
+            <button onclick="Load()">Play</button>
         </main>
         <footer>
             <h1>This is a FOOTER</h1>
