--- a/main.html
+++ b/main.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Стани Богат със SoftUni</title>
-    <link rel="stylesheet" type="text/css" href="wheel.css">
-    <script type="text/javascript" src="js.js"></script>
+    <link rel="stylesheet" type="text/css" href="resources/css/wheel.css">
+    <script type="text/javascript" src="resources/js/js.js"></script>
 </head>
 <body>
     <div>
-        <img src="images/wheel.png"/>
+        <img src="resources/images/wheel.png"/>
     </div>
 </body>
 </html>
