--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic">
             </a>
-        <p class="white">Искате да станете Богат Програмист? Участвайте всеки ден в на живото предаване "СофУни"</p>
+        <p class="white">Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофУни"
         </p>
     </div>
 </header>
@@ -45,7 +45,7 @@
                 <li><a href="#">Страница 3</a></li>
                 <li><a href="#">Страница 4</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="search">
+            <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
                     <input type="text" class="form-control" id="pwd" placeholder="Който търси Намира">
           <span class="input-group-btn">
