--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic">
             </a>
+
         <p class="white">Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофУни"
         </p>
     </div>
@@ -58,6 +59,132 @@
         </div>
     </div>
 </nav>
+
+<main class="container text-center">
+    <div class="row">
+        <aside>
+            <div class="col-sm-3 well">
+                <div class="panel panel-default">
+                    <div class="panel-heading long-heading"><p>ПОБЕДИТЕЛИ</p></div>
+                    <div class="panel-body">
+                        <div class="well text-center">
+                            <a href="#">
+                                <h3>
+                                    Бил Гейтс
+                                </h3>
+                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
+                                     alt="Gates Pic">
+
+                                <p class="aside-p">
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                </p>
+                            </a>
+                        </div>
+
+                        <div class="well text-center">
+                            <a href="#">
+                                <h3>
+                                    Бил Гейтс
+                                </h3>
+                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
+                                     alt="Gates Pic">
+
+                                <p class="aside-p">
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading"><p>ЕКИП</p></div>
+                    <div class="panel-body">
+                        <div class="well text-center">
+                            <a href="#">
+                                <h3>
+                                    Наков
+                                </h3>
+                                <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
+                                     alt="Nakov Pic">
+
+                                <p class="aside-p">
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                </p>
+                            </a>
+                        </div>
+
+                        <div class="well text-center">
+                            <a href="#">
+                                <h3>
+                                    Наков
+                                </h3>
+                                <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
+                                     alt="Nakov Pic">
+
+                                <p class="aside-p">
+                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
+        <section id="main-section">
+            <div class="col-sm-9">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="resources/images/nakov2.jpg" alt="Image">
+                            <div class="carousel-caption">
+                                <h3>Sell $</h3>
+                                <p>Money Money.</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="resources/images/nakov2.jpg" alt="Image">
+                            <div class="carousel-caption">
+                                <h3>More Sell $</h3>
+                                <p>Lorem ipsum...</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="resources/images/nakov2.jpg" alt="Image">
+                            <div class="carousel-caption">
+                                <h3>More Sell $</h3>
+                                <p>Lorem ipsum...</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
+
 
 </body>
 </html>
