Added more winners
if you want to change it you are free to do it

--- a/index.html
+++ b/index.html
@@ -81,21 +81,32 @@
                                 </p>
                             </a>
                         </div>
-
-                        <div class="well text-center">
+						<div class="well text-center">
                             <a href="#">
                                 <h3>
-                                    Бил Гейтс
+                                    Стив Джобс
                                 </h3>
-                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
-                                     alt="Gates Pic">
-
+                                <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
+                                     alt="Jobs Pic">
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                     When he won the show he made Apple.
                                 </p>
                             </a>
                         </div>
                     </div>
+					<div class="well text-center">
+                            <a href="#">
+                                <h3>
+                                    Гейб Нюъл
+                                </h3>
+                                <img src="resources/images/gaben.png" class="img-responsive center-block img-bar"
+                                     alt="Gaben Pic">
+
+                                <p class="aside-p">
+                                 When he won the show he made Value.
+                                </p>
+                            </a>
+                        </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading"><p>ЕКИП</p></div>
