Format code. Adding effects to header. Adding links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <header class="jumbotron">
     <div class="container-fluid text-center">
         <p>
-            <a href="https://softuni.bg/">
+            <a href="https://softuni.bg/" class="hvr-pulse-grow">
                 Стани Богат със СофтУни
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic">
             </a>
-
-        <p class="white">Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофУни"
+        </p>
+        <p class="white">
+            Искате да станете Богат Програмист? Участвайте всеки ден в живото предаване "СофтУни"
         </p>
     </div>
 </header>
@@ -49,11 +50,11 @@
             <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
                     <input type="text" class="form-control" id="pwd" placeholder="Който търси Намира">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">
-                <span class="glyphicon glyphicon-search"></span>
-            </button>
-          </span>
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">
+                    <span class="glyphicon glyphicon-search"></span>
+                </button>
+            </span>
                 </div>
             </form>
         </div>
@@ -65,7 +66,7 @@
         <aside>
             <div class="col-sm-3 well">
                 <div class="panel panel-default">
-                    <div class="panel-heading long-heading"><p>ПОБЕДИТЕЛИ</p></div>
+                    <div class="panel-heading long-heading"><a href="winners.html"><p>ПОБЕДИТЕЛИ</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
                             <a href="#">
@@ -84,7 +85,7 @@
 						<div class="well text-center">
                             <a href="#">
                                 <h3>
-                                    Стив Джобс
+                                    Стийв Джобс
                                 </h3>
                                 <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
                                      alt="Jobs Pic">
@@ -109,7 +110,7 @@
                         </div>
                 </div>
                 <div class="panel panel-default">
-                    <div class="panel-heading"><p>ЕКИП</p></div>
+                    <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
                             <a href="#">
