--- a/pobediteli.html
+++ b/pobediteli.html
@@ -41,8 +41,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="pobediteli.html">Победители</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="pobediteli.html">Победители</a></li>
                 <li><a href="#">Страница 2</a></li>
                 <li><a href="#">Страница 3</a></li>
                 <li><a href="#">Страница 4</a></li>
@@ -64,54 +64,6 @@
 <main class="container text-center">
     <div class="row">
         <aside class="col-sm-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading long-heading"><a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
-                    <div class="panel-body">
-                        <div class="well text-center">
-                            <a href="#">
-                                <h3>
-                                    Бил Гейтс
-                                </h3>
-                                <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
-                                     alt="Gates Pic">
-
-                                <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
-                                </p>
-                            </a>
-                        </div>
-						<div class="well text-center">
-                            <a href="#">
-                                <h3>
-                                    Стийв Джобс
-                                </h3>
-                                <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
-                                     alt="Jobs Pic">
-                                <p class="aside-p">
-                                     When he won the show he made Apple.
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- Consider Revision
-					<div class="well text-center">
-                            <a href="#">
-                                <h3>
-                                    Гейб Нюъл
-                                </h3>
-                                <img src="resources/images/gaben.png" class="img-responsive center-block img-bar"
-                                     alt="Gaben Pic">
-
-                                <p class="aside-p">
-                                 When he won the show he made Value.
-                                </p>
-                            </a>
-                        </div>
-                   till here -->
-
-                </div>
                 <div class="panel panel-default">
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
@@ -148,50 +100,61 @@
         </aside>
 
         <section id="main-section" class="col-sm-9">
-                <div id="myCarousel" class="carousel slide">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
-                            <div class="carousel-caption">
-                                <h3>Sell $</h3>
-                                <p>Money Money.</p>
+                <div class="well winners-well">
+                    <div class="panel winners-panel">
+                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-body winners-panel row center-block">
+                            <div class="col-sm-3 ">
+                                <img src="resources/images/gates.png" class="img-responsive winners-img center-block">
                             </div>
-                        </div>
-
-                        <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
-                            <div class="carousel-caption">
-                                <h3>More Sell $</h3>
-                                <p>Lorem ipsum...</p>
-                            </div>
-                        </div>
-
-                        <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
-                            <div class="carousel-caption">
-                                <h3>More Sell $</h3>
-                                <p>Lorem ipsum...</p>
+                            <div class="winners-text col-sm-9">
+                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
+                                ContentPanel Content
                             </div>
                         </div>
                     </div>
-
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                </div>
+                <div class="well winners-well">
+                    <div class="panel winners-panel">
+                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-body winners-panel row center-block">
+                            <div class="col-sm-3">
+                                <img src="resources/images/gates.png" class="img-responsive winners-img">
+                            </div>
+                            <div class="winners-text col-sm-9">Panel ContentPanel ContentPanel
+                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
+                                ContentPanel Content
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="well winners-well">
+                    <div class="panel winners-panel">
+                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-body winners-panel row center-block">
+                            <div class="col-sm-3">
+                                <img src="resources/images/gates.png" class="img-responsive winners-img">
+                            </div>
+                            <div class="winners-text">Panel ContentPanel ContentPanel
+                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
+                                ContentPanel Content
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="well winners-well">
+                    <div class="panel winners-panel">
+                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-body winners-panel row center-block">
+                            <div class="col-sm-3">
+                                <img src="resources/images/gates.png" class="img-responsive winners-img">
+                            </div>
+                            <div class="winners-text col-sm-9">Panel ContentPanel ContentPanel
+                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
+                                ContentPanel Content
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </section>
     </div>
