--- a/pobediteli.html
+++ b/pobediteli.html
@@ -13,7 +13,7 @@
 <header class="jumbotron">
     <div class="container-fluid text-center">
         <p>
-            <a href="https://softuni.bg/" target="_blank" class="hvr-pulse-grow">
+            <a href="https://softuni.bg/" class="hvr-pulse-grow">
                 Стани Богат със СофтУни
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic">
@@ -68,7 +68,7 @@
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Наков
                                 </h3>
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Наков
                                 </h3>
