--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="jumbotron">
     <div class="container-fluid text-center">
         <p>
-            <a href="https://softuni.bg/" target="_blank" class="hvr-pulse-grow">
+            <a href="https://softuni.bg/" class="hvr-pulse-grow">
                 Стани Богат със СофтУни
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
                      alt="Logo pic">
@@ -65,10 +65,10 @@
     <div class="row">
         <aside class="col-sm-3">
                 <div class="panel panel-default">
-                    <div class="panel-heading long-heading"><a href="pobediteli.html" target="_blank"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
+                    <div class="panel-heading long-heading"><a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Бил Гейтс
                                 </h3>
@@ -82,7 +82,7 @@
                             </a>
                         </div>
 						<div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Стийв Джобс
                                 </h3>
@@ -116,7 +116,7 @@
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Наков
                                 </h3>
@@ -131,7 +131,7 @@
                         </div>
 
                         <div class="well text-center">
-                            <a href="#" class="hvr-grow">
+                            <a href="#">
                                 <h3>
                                     Наков
                                 </h3>
