Added content to index.html and pobediteli.html

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="pobediteli.html">Победители</a></li>
-                <li><a href="#">Страница 2</a></li>
-                <li><a href="#">Страница 3</a></li>
-                <li><a href="#">Страница 4</a></li>
+                <li><a href="team.html">Екип</a></li>
+                <li><a href="parmel.html">Parmel</a></li>
+                <li><a href="not-fun.html">Не-забавна-страница!</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
@@ -68,7 +68,7 @@
                     <div class="panel-heading long-heading"><a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#">
+                            <a href="pobediteli.html#bill-gates">
                                 <h3>
                                     Бил Гейтс
                                 </h3>
@@ -76,41 +76,39 @@
                                      alt="Gates Pic">
 
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Да, наистина са били в една детска градина с Банкин!
                                 </p>
                             </a>
                         </div>
 						<div class="well text-center">
-                            <a href="#">
+                            <a href="pobediteli.html#steve-jobs">
                                 <h3>
                                     Стийв Джобс
                                 </h3>
                                 <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
                                      alt="Jobs Pic">
                                 <p class="aside-p">
-                                     When he won the show he made Apple.
+                                    Джобс и Наков съученици.
                                 </p>
                             </a>
                         </div>
-                    </div>
+                        <div class="well text-center">
+                                <a href="pobediteli.html#mark-z">
+                                    <h3>
+                                        Марк Зукърбърг
+                                    </h3>
+                                    <img src="resources/images/mark_z.jpg" class="img-responsive center-block img-bar"
+                                         alt="Gaben Pic">
 
-                    <!-- Consider Revision
-					<div class="well text-center">
-                            <a href="#">
-                                <h3>
-                                    Гейб Нюъл
-                                </h3>
-                                <img src="resources/images/gaben.png" class="img-responsive center-block img-bar"
-                                     alt="Gaben Pic">
+                                    <p class="aside-p">
+                                        Вечните комшии Ангел и Марки
+                                    </p>
+                                </a>
+                            </div>
 
-                                <p class="aside-p">
-                                 When he won the show he made Value.
-                                </p>
-                            </a>
                         </div>
-                   till here -->
 
+					
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
