--- a/pobediteli.html
+++ b/pobediteli.html
@@ -43,9 +43,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="pobediteli.html">Победители</a></li>
-                <li><a href="#">Страница 2</a></li>
-                <li><a href="#">Страница 3</a></li>
-                <li><a href="#">Страница 4</a></li>
+                <li><a href="team.html">Екип</a></li>
+                <li><a href="parmel.html">Parmel</a></li>
+                <li><a href="not-fun.html">Не-забавна-страница!</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <div class="form-group input-group">
@@ -100,7 +100,7 @@
         </aside>
 
         <section id="main-section" class="col-sm-9">
-                <div class="well winners-well">
+                <div class="well winners-well" id="bill-gates">
                     <div class="panel winners-panel">
                         <div class="panel-heading winners-panel">Бил Гейтс</div>
                         <div class="panel-body winners-panel row center-block">
@@ -108,22 +108,20 @@
                                 <img src="resources/images/gates.png" class="img-responsive winners-img center-block">
                             </div>
                             <div class="winners-text col-sm-9">
-                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
-                                ContentPanel Content
+                                Бил Гейтс е бил в една детска градина с Банкин - втора, както я знаят всички във Софето. Били са партийки още от малки, но Бил е решил да поеме по свой път, още на 4 годишна възраст. Зарязал детска градина, зарязал Дружба и тръгнал по Амерката. Преди това на гарата в Елин Пелин докато бил на гости на баба си (и да намаже една филия с мас и червен пипер) намерил четирлистна детелина и от там всичко му тръгнало. Осталото е призказка, която всички знаят.
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="well winners-well">
+                <div class="well winners-well" id="steve-jobs">
                     <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-heading winners-panel">Стийв Джобс</div>
                         <div class="panel-body winners-panel row center-block">
                             <div class="col-sm-3">
-                                <img src="resources/images/gates.png" class="img-responsive winners-img">
+                                <img src="resources/images/jobs.jpg" class="img-responsive winners-img">
                             </div>
-                            <div class="winners-text col-sm-9">Panel ContentPanel ContentPanel
-                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
-                                ContentPanel Content
+                            <div class="winners-text col-sm-9">
+                                Още от както са били заедно в предучилищна възраст Наков и Стийв Джобс не са се разбирали. Наков си е правел постоянно схеми на интеграли, процесори, на лампи и даже на една табуретка. Но Стиви, както го наричала госпожата на галено, му крадял всичките идеи. Даже в трети клас Джобс окраднал кифлата с мармалад от чина на Наков в голямото междучасие, или поне така твърди той. Джобс отричаше до последно за кражбата на кифлата. А останалото е приказва, която всички знаят.
                             </div>
                         </div>
                     </div>
