Added content to index.html and pobediteli.html. Added team.html

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     <div class="row">
         <aside class="col-sm-3">
                 <div class="panel panel-default">
-                    <div class="panel-heading long-heading"><a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a></div>
+                    <div class="panel-heading long-heading">
+                        <a href="winners.html"><p id="text-resize">ПОБЕДИТЕЛИ</p></a>
+                    </div>
+
                     <div class="panel-body">
                         <div class="well text-center">
                             <a href="pobediteli.html#bill-gates">
@@ -88,7 +91,7 @@
                                 <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
                                      alt="Jobs Pic">
                                 <p class="aside-p">
-                                    Джобс и Наков съученици.
+                                    Джобс и Наков съученици
                                 </p>
                             </a>
                         </div>
@@ -98,7 +101,7 @@
                                         Марк Зукърбърг
                                     </h3>
                                     <img src="resources/images/mark_z.jpg" class="img-responsive center-block img-bar"
-                                         alt="Gaben Pic">
+                                         alt="Mark Zuck Pic">
 
                                     <p class="aside-p">
                                         Вечните комшии Ангел и Марки
@@ -107,14 +110,13 @@
                             </div>
 
                         </div>
+                    </div>
 
-					
-                </div>
                 <div class="panel panel-default">
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#">
+                            <a href="team.html#nakov">
                                 <h3>
                                     Наков
                                 </h3>
@@ -122,22 +124,34 @@
                                      alt="Nakov Pic">
 
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Наков си е Наков, знаем си го
                                 </p>
                             </a>
                         </div>
 
                         <div class="well text-center">
-                            <a href="#">
+                            <a href="team.html#bankin">
                                 <h3>
-                                    Наков
+                                    Банкин
                                 </h3>
-                                <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
-                                     alt="Nakov Pic">
+                                <img src="resources/images/bankin.jpg" class="img-responsive center-block img-bar"
+                                     alt="Bankin Pic">
 
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Банкин - css гуру
+                                </p>
+                            </a>
+                        </div>
+                        <div class="well text-center">
+                            <a href="team.html#angel">
+                                <h3>
+                                    Ангел
+                                </h3>
+                                <img src="resources/images/angel.jpg" class="img-responsive center-block img-bar"
+                                     alt="Bankin Pic">
+
+                                <p class="aside-p">
+                                    Ангел - ТеамВорк лидер
                                 </p>
                             </a>
                         </div>
