--- a/pobediteli.html
+++ b/pobediteli.html
@@ -68,22 +68,21 @@
                     <div class="panel-heading"><a href=""><p>ЕКИП</p></a></div>
                     <div class="panel-body">
                         <div class="well text-center">
-                            <a href="#">
+                            <a href="team.html#bankin">
                                 <h3>
-                                    Наков
+                                    Банкин
                                 </h3>
-                                <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
+                                <img src="resources/images/bankin.jpg" alt="Банкин" class="img-responsive center-block img-bar"
                                      alt="Nakov Pic">
 
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Най-свестния от СофтУнито...
                                 </p>
                             </a>
                         </div>
 
                         <div class="well text-center">
-                            <a href="#">
+                            <a href="team.html#nakov">
                                 <h3>
                                     Наков
                                 </h3>
@@ -91,7 +90,7 @@
                                      alt="Nakov Pic">
 
                                 <p class="aside-p">
-                                    Lorem ipsum dolor sit amet, ius no saepe convenire.
+                                    Най-свестния от СофтУнито...
                                 </p>
                             </a>
                         </div>
@@ -108,7 +107,8 @@
                                 <img src="resources/images/gates.png" class="img-responsive winners-img center-block">
                             </div>
                             <div class="winners-text col-sm-9">
-                                Бил Гейтс е бил в една детска градина с Банкин - втора, както я знаят всички във Софето. Били са партийки още от малки, но Бил е решил да поеме по свой път, още на 4 годишна възраст. Зарязал детска градина, зарязал Дружба и тръгнал по Амерката. Преди това на гарата в Елин Пелин докато бил на гости на баба си (и да намаже една филия с мас и червен пипер) намерил четирлистна детелина и от там всичко му тръгнало. Осталото е призказка, която всички знаят.
+                                <p>Печели най-голямата сума досега - 25 хиляди лева. Не успява да отговори правилно на въпроса "Кой е по-добрия език за програмиране?", давайки съвсем очаквания отговор C#.</p>
+                                Бил Гейтс е бил в една детска градина с Банкин - втора, както я знаят всички във София. Били са партийки още от малки, но Бил е решил да поеме по свой път, още на 4 годишна възраст. Зарязал детска градина, зарязал Дружба и тръгнал по Амерката. Преди това на гарата в Елин Пелин докато бил на гости на баба си (и да намаже една филия с мас и червен пипер) намерил четирлистна детелина и от там всичко му тръгнало. Осталото е призказка, която всички знаят.
                             </div>
                         </div>
                     </div>
@@ -121,25 +121,28 @@
                                 <img src="resources/images/jobs.jpg" class="img-responsive winners-img">
                             </div>
                             <div class="winners-text col-sm-9">
+                                <p>В състезанието "Кой иска да стане богат програмист" спечелва завидната сума от 10 хиляди лева. Въпросът, на който не успява да отговори, е "Колко оригинални патента има Apple?", като отговаря 3.</p>
                                 Още от както са били заедно в предучилищна възраст Наков и Стийв Джобс не са се разбирали. Наков си е правел постоянно схеми на интеграли, процесори, на лампи и даже на една табуретка. Но Стиви, както го наричала госпожата на галено, му крадял всичките идеи. Даже в трети клас Джобс окраднал кифлата с мармалад от чина на Наков в голямото междучасие, или поне така твърди той. Джобс отричаше до последно за кражбата на кифлата. А останалото е приказва, която всички знаят.
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="well winners-well">
+                <div class="well winners-well" id="mark-z">
                     <div class="panel winners-panel">
-                        <div class="panel-heading winners-panel">Бил Гейтс</div>
+                        <div class="panel-heading winners-panel">Марк Зукърбърг</div>
                         <div class="panel-body winners-panel row center-block">
                             <div class="col-sm-3">
-                                <img src="resources/images/gates.png" class="img-responsive winners-img">
+                                <img src="resources/images/mark_z.jpg" class="img-responsive winners-img">
                             </div>
-                            <div class="winners-text">Panel ContentPanel ContentPanel
-                                ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel ContentPanel
-                                ContentPanel Content
+                            <div class="winners-text">
+                                <p>Малко не му оставада се пребори за златен медал от изключително популярната игра "Кой иска да стане богат програмист". Препъва се на въпрос за 5 хиляди лева а въпросa "Какви са цветовете на логото на Гугъл?" - отоговаря синьо на всички букви.</p>
+                                Ангел и Марк са били почти като братя, квартални батки, както се казва. Все интересни неща им се случвали - карали са колелета, ловяли са риба лятото на язовира, гонили са мацките вечер. Даже веднъж играли на футбол с Гонзо, който бил на квартира в съседния квартал, обаче там нямало къде да тренира футбол и идвал понякога в училището до панелката на Марк (навремето го наричали Марки Маус, защото имал голям нос). Но Марк решил да стане богат, нищо общо с това, че е евреин. Речено - сторено! И отишъл да учи Вишо в Габрово, понеже там лесно се влизало. И останалото е приказвата, която всички знаят.
                             </div>
                         </div>
                     </div>
                 </div>
+
+                
                 <div class="well winners-well">
                     <div class="panel winners-panel">
                         <div class="panel-heading winners-panel">Бил Гейтс</div>
@@ -153,7 +156,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> 
+            
+
         </section>
     </div>
 </main>
