--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://softuni.bg/" class="hvr-pulse-grow">
                 Стани Богат със СофтУни
                 <img src="resources/images/logo.png" id="logo" class="img-responsive" style="display:inline"
-                     alt="Logo pic">
+                     alt="Logo pic" />
             </a>
         </p>
         <p class="white">
@@ -41,7 +41,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Вкъщи</a></li>
                 <li><a href="pobediteli.html">Победители</a></li>
                 <li><a href="team.html">Екип</a></li>
                 <li><a href="parmel.html">Parmel</a></li>
@@ -76,7 +76,7 @@
                                     Бил Гейтс
                                 </h3>
                                 <img src="resources/images/gates.png" class="img-responsive center-block img-bar"
-                                     alt="Gates Pic">
+                                     alt="Gates Pic" />
 
                                 <p class="aside-p">
                                     Да, наистина са били в една детска градина с Банкин!
@@ -89,7 +89,7 @@
                                     Стийв Джобс
                                 </h3>
                                 <img src="resources/images/Jobs.jpg" class="img-responsive center-block img-bar"
-                                     alt="Jobs Pic">
+                                     alt="Jobs Pic" />
                                 <p class="aside-p">
                                     Джобс и Наков съученици
                                 </p>
@@ -101,10 +101,10 @@
                                         Марк Зукърбърг
                                     </h3>
                                     <img src="resources/images/mark_z.jpg" class="img-responsive center-block img-bar"
-                                         alt="Mark Zuck Pic">
+                                         alt="Mark Zuck Pic" />
 
                                     <p class="aside-p">
-                                        Вечните комшии Ангел и Марки
+                                        Вечните комшии Ангел и Марк
                                     </p>
                                 </a>
                             </div>
@@ -121,7 +121,7 @@
                                     Наков
                                 </h3>
                                 <img src="resources/images/nakov.png" class="img-responsive center-block img-bar"
-                                     alt="Nakov Pic">
+                                     alt="Nakov Pic" />
 
                                 <p class="aside-p">
                                     Наков си е Наков, знаем си го
@@ -135,7 +135,7 @@
                                     Банкин
                                 </h3>
                                 <img src="resources/images/bankin.jpg" class="img-responsive center-block img-bar"
-                                     alt="Bankin Pic">
+                                     alt="Bankin Pic" />
 
                                 <p class="aside-p">
                                     Банкин - css гуру
@@ -148,7 +148,7 @@
                                     Ангел
                                 </h3>
                                 <img src="resources/images/angel.jpg" class="img-responsive center-block img-bar"
-                                     alt="Bankin Pic">
+                                     alt="Ангел Pic" />
 
                                 <p class="aside-p">
                                     Ангел - ТеамВорк лидер
@@ -171,15 +171,17 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
-                            <div class="carousel-caption">
-                                <h3>Sell $</h3>
-                                <p>Money Money.</p>
-                            </div>
+                            <a href="http://www.softuni.bg">
+                                <img src="resources/images/nakov2.jpg" alt="Image" />
+                                <div class="carousel-caption">
+                                    <h3>Искаш да станеш много богат?</h3>
+                                    <p>Това е твоят шанс</p>
+                                </div>
+                            </a>
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
+                            <img src="resources/images/nakov2.jpg" alt="Image" />
                             <div class="carousel-caption">
                                 <h3>More Sell $</h3>
                                 <p>Lorem ipsum...</p>
@@ -187,7 +189,7 @@
                         </div>
 
                         <div class="item">
-                            <img src="resources/images/nakov2.jpg" alt="Image">
+                            <img src="resources/images/nakov2.jpg" alt="Image" />
                             <div class="carousel-caption">
                                 <h3>More Sell $</h3>
                                 <p>Lorem ipsum...</p>
